infra/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldl
  namespace: ldl-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: portal.ldl.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: portal, port: { number: 80 } } }
